[gd_scene load_steps=8 format=3 uid="uid://1abapmdihvfw"]

[ext_resource type="Script" uid="uid://b0h8c4vqajvri" path="res://Game_User_Interface/title_screen.gd" id="1_5fu7q"]
[ext_resource type="Theme" uid="uid://dwdqkuxyspo32" path="res://Game_User_Interface/Theme.tres" id="1_wjfn0"]

[sub_resource type="GDScript" id="GDScript_r5ysx"]
script/source = "extends Button

func _on_pressed() -> void:
	get_tree().change_scene_to_file(\"res://Game_User_Interface/Single_Player_Level_Select.tscn\")
"

[sub_resource type="GDScript" id="GDScript_tl6ip"]
script/source = "extends Button


func _on_pressed() -> void:
	get_tree().change_scene_to_file(\"res://Game_User_Interface/Wardrobe.tscn\")
"

[sub_resource type="GDScript" id="GDScript_f3jgk"]
script/source = "extends Button


func _on_pressed() -> void:
	get_tree().change_scene_to_file(\"res://Game_User_Interface/Settings.tscn\")
"

[sub_resource type="GDScript" id="GDScript_wjfn0"]
script/source = "extends Button
	

func _on_pressed() -> void:
	get_tree().change_scene_to_file(\"res://Game_User_Interface/Multiplayer_Level_Select.tscn\")
"

[sub_resource type="GDScript" id="GDScript_yc8ls"]
script/source = "extends Button


func _on_pressed() -> void:
	get_tree().quit()
"

[node name="TitleScreen" type="CanvasLayer"]
script = ExtResource("1_5fu7q")

[node name="Single_Player" type="Button" parent="."]
offset_left = 652.0
offset_top = 252.0
offset_right = 1052.0
offset_bottom = 409.0
theme = ExtResource("1_wjfn0")
text = "Single Player"
script = SubResource("GDScript_r5ysx")

[node name="Wardrobe" type="Button" parent="."]
offset_left = 100.0
offset_top = 439.0
offset_right = 400.0
offset_bottom = 596.0
theme = ExtResource("1_wjfn0")
text = "Wardrobe"
script = SubResource("GDScript_tl6ip")

[node name="Settings" type="Button" parent="."]
offset_left = 425.0
offset_top = 439.0
offset_right = 725.0
offset_bottom = 596.0
theme = ExtResource("1_wjfn0")
text = "Settings"
script = SubResource("GDScript_f3jgk")

[node name="Multiplayer" type="Button" parent="."]
offset_left = 100.0
offset_top = 252.0
offset_right = 500.0
offset_bottom = 409.0
theme = ExtResource("1_wjfn0")
action_mode = 0
text = "Multiplayer"
script = SubResource("GDScript_wjfn0")

[node name="Label" type="Label" parent="."]
offset_left = 217.0
offset_top = 50.0
offset_right = 917.0
offset_bottom = 225.0
theme = ExtResource("1_wjfn0")
theme_override_font_sizes/font_size = 125
text = "Game Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Quit" type="Button" parent="."]
offset_left = 750.0
offset_top = 437.0
offset_right = 1050.0
offset_bottom = 594.0
theme = ExtResource("1_wjfn0")
text = "Quit"
script = SubResource("GDScript_yc8ls")

[node name="Change_User" type="Button" parent="."]
offset_left = 1002.0
offset_top = 50.0
offset_right = 1102.0
offset_bottom = 150.0
text = "Change
User"

[connection signal="pressed" from="Single_Player" to="." method="_on_single_player_pressed"]
[connection signal="pressed" from="Wardrobe" to="." method="_on_wardrobe_pressed"]
[connection signal="pressed" from="Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_quit_pressed"]
